# CLI-Menu

./: .gitignore  CLImenu.py  LICENSE  README.md  main.py  menuoption.py  pyproject.toml
src/airbagclimenu/: Menu.py  error.py
