[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CLI Menu"
version = "0.1.0"
authors = [
    { name = "Anton Norman", email="normananton03@gmail.com" },
]
description = "A python package that makes it easy and intuitive to create good looking CLI menus"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Airbag65/CLI-Menu"
Issues = "https://github.com/Airbag65/CLI-Menu/issues"

